# hello-fastapi

./: .env  main.py  pyproject.toml  requirements.txt  tasks.db
app/: __init__.py  config.py  database.py
app/models/: task.py
app/routers/: task.py
app/schemas/: task.py
tests/: conftest.py  test_main.py  test_task.py
